<resources>
    <string name="app_name">Fandog</string>

    <string name="usr">Usuario</string>
    <string name="ingrese_password">Contaseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="perdi_mi_clave">Perdi mi clave</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="correo_electronico">Correo electronico...</string>
    <string name="reenviar_clave">Reenviar clave</string>
    <string name="ingresa_tu_correo_te_enviaremos_una_clave_nueva">Te enviaremos una clave nueva.</string>
    <string name="cargar_turno">Cargar turno</string>
    <string name="title_activity_carga">Carga</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stock_inicial">Stock Inicial</string>
    <string name="salchichas">Salchichas</string>
    <string name="compras">Compras:</string>
    <string name="rotos">Rotos:</string>
    <string name="sin_cargo">Sin cargo:</string>
    <string name="sin_cargo_personal">Sin cargo personal:</string>
    <string name="salidas">Salidas:</string>
    <string name="stock_final">Stock final:</string>
    <string name="title_activity_principal">Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="continuar">Continuar</string>
    <string name="guardar">Guardar turno</string>
    <string name="inicial_de_gaseosas">Inicial de Gaseosas</string>
    <string name="inicial_de_panes">Inicial de Panes</string>
    <string name="inicial_de_salchichas">Inicial de Salchichas</string>
    <string name="turno">Turno:</string>
    <string name="local">Local:</string>
    <string name="efectivo_en_caja">Efectivo en caja</string>
    <string name="logo_de_la_empresa">Logo de la empresa</string>
    <string name="no_tenes_un_nombre_asignado">No tenes un nombre asignado:</string>
    <string name="ingresar_nombre">Ingresar nombre</string>
    <string name="efectivo_inicial">Efectivo inicial en $:</string>
    <string name="efectivo_final">Efectivo final en $:</string>
    <string name="diferencia">Diferencia de $:</string>
    <string name="ingresar_apellido">Ingresar apellido</string>
    <string name="alivios">Alivios</string>
    <string name="precio_de_las_salchichas">Pcio Salchichas</string>
    <string name="precio_de_las_gaseosas_de_vidrio">Pcio Gaseosas de vidrio </string>
    <string name="ventas">Vendidos</string>
    <string name="_0">0</string>
    <string name="titleGuardando">Revisa todo antes de guardar.</string>
    <string name="enviarVenta">Enviar turno</string>
    <string name="cancelar">Cancelar</string>
    <string name="cajaVenta">Ventas totales en $:</string>
    <string name="total_alivios_en">Total alivios en $:</string>
    <string name="necesitasConexion">Necesitas una conexion activa a internet para usar la app</string>
    <string name="carga_de_stock">Carga de Stock</string>
    <string name="cargar_caja">Cargar Caja</string>
    <string name="todosLosCamposDebenEstarCargados">Todos los campos deben estar cargados</string>
    <string name="diferenciasEnLaCaja">Diferencias en la caja</string>
    <string name="auto">Auto</string>
    <string name="datosEnviados">Datos enviados</string>

    <string-array name="spinner_locales">
        <item>-Seleccionar-</item>
        <item>Pergamino - Irigoyen</item>
        <item>Pergamino - Av Mayo</item>
        <item>Colon</item>
        <item>Arrecifes</item>
    </string-array>

    <string-array name="spinner_turnos">
        <item>-Seleccionar-</item>
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
        <item>Madrugada</item>
    </string-array>
</resources>
