<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stockInicial"
            android:iconTint="@color/colorPrimaryDark"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/stock_inicial" />
        <item
            android:id="@+id/nav_carga_stock"
            android:iconTint="@color/colorPrimaryDark"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/carga_de_stock" />
        <item
            android:id="@+id/nav_carga_caja"
            android:icon="@android:drawable/ic_input_get"
            android:iconTint="@color/colorPrimaryDark"
            android:title="@string/cargar_caja" />
    </group>


    <item
        android:id="@+id/nav_salir"
        android:icon="@drawable/ic_log_out"
        android:iconTint="@color/colorPrimaryDark"
        android:title="@string/cerrar_sesion" />


</menu>
