    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.com.thinco.fandog.InicialFragment"
        android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/nombreVendedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vendedor: Frank Toledo"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turno"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinnerTurno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinnerLocal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicial_de_salchichas"/>

    <EditText
        android:id="@+id/iniSalchichas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicial_de_panes"/>

    <EditText
        android:id="@+id/iniPanes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicial_de_gaseosas"/>

    <EditText
        android:id="@+id/iniGaseosas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/efectivo_en_caja"/>

    <EditText
        android:id="@+id/efectivo_en_caja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGuardarIni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"/>
    </LinearLayout>
    </ScrollView>
