        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_inicial" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fgCargaStockI"
            android:inputType="number"
            android:singleLine="true"
            android:freezesText="true"
            android:maxLength="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compras" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fgCargaCompras"
            android:inputType="number"
            android:freezesText="true"
            android:singleLine="true"
            android:maxLength="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotos" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:id="@+id/fgCargaRotos"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_cargo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:id="@+id/fgCargaSinCargo"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_cargo_personal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fgCargaSCPersonal"
            android:freezesText="true"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salidas" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fgCargaSalidas"
            android:freezesText="true"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ventas" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fgCargaVentas"
            android:clickable="false"
            android:text="Se calculan solas."
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_final" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fgCargaStockF"
            android:freezesText="true"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="5"/>

        <Button
            android:id="@+id/fgCargaGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"/>

    </LinearLayout>
</ScrollView>
