<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_tu_correo_te_enviaremos_una_clave_nueva"
        android:textSize="8pt"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/etDialogCorreo"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico"/>
    <Button
        android:id="@+id/btnDialogPerdmiMiPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reenviar_clave"
        />

</LinearLayout>