<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.com.thinco.fandog.CajaFragment">
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/efectivo_inicial"/>

        <EditText
            android:id="@+id/Caja_efectivoInicial"
            android:freezesText="true"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ventas"/>

        <EditText
            android:id="@+id/Caja_ventas"
            android:freezesText="true"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alivios"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Desde:"/>
            <EditText
                android:id="@+id/desdeAlivios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLines="1"
                android:maxLength="5"/>
            <TextView
                android:layout_width="wrap_content"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:text="Hasta:"/>
            <EditText
                android:id="@+id/hastaAlivios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:layout_weight="1"
                android:maxLength="5"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total alivios"/>
        <EditText
            android:id="@+id/totalAlivios"
            android:freezesText="true"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/efectivo_final"/>
        <EditText
            android:id="@+id/Caja_efectivoFinal"
            android:freezesText="true"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diferencia"/>
        <EditText
            android:id="@+id/Caja_diferencia"
            android:freezesText="true"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnGuardarEfectivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"/>

    </LinearLayout>

</ScrollView>
